--- a/src/styles/app.less
+++ b/src/styles/app.less
@@ -12,8 +12,14 @@
 body{
     padding: 0;margin: 0;
 }
+.app-container{
+    padding-top: 64px;
+    
+    overflow: hidden;
+}
 .frame{
     display: flex;
+    height: 100%;
 }
 .leftPart{
     display: inline-block;
@@ -22,9 +28,10 @@ body{
 }
 .container-right{
     display: inline-block;
-    height:500px;
     flex: 1;
     background-color: #fff;
+    overflow-y: scroll;
+    
 }
 .container{
     background-color: #fff;
