--- a/src/styles/learnrecord.less
+++ b/src/styles/learnrecord.less
@@ -1,7 +1,21 @@
 #learnrecordContainer{
+    display: flex;
+    width: 100%;
+    overflow-x: hidden;
+    box-sizing: border-box;
+    .addpart,.updatePart{
+        flex: 1;
+    }
+    .updatePart{
+        padding:0 20px;
+        box-sizing: border-box;
+    }
     .gen_area{
         max-width: 100%;
-        min-width: 600px;
+        min-width: 100%;
         min-height: 300px;
+        font-family: "MicroSoft Yahei";
+        font-size: 16px;
+        color: #00c8fb;
     }
 }
