--- a/src/styles/app.less
+++ b/src/styles/app.less
@@ -11,6 +11,7 @@
 @productcolor:#fd794a;
 body{
     padding: 0;margin: 0;
+    overflow-x: hidden;
 }
 .app-container{
     padding-top: 64px;
@@ -20,6 +21,7 @@ body{
 .frame{
     display: flex;
     height: 100%;
+    overflow-x: hidden;
 }
 .leftPart{
     display: inline-block;
