--- a/src/styles/login.less
+++ b/src/styles/login.less
@@ -1,3 +1,4 @@
+
 .login-page{
     width: 100%;
     // position: relative;
@@ -8,6 +9,9 @@
         top: 0;left: 0;
         background: url('http://ovhjj2x39.bkt.clouddn.com/jake-blucker-316192.jpg') center no-repeat;
         background-size: cover;
+        transition: filter 1s linear;
+    }
+    .blur-login{
         -webkit-filter: blur(3px); /* Chrome, Opera */
         -moz-filter: blur(3px);
          -ms-filter: blur(3px);    
@@ -24,7 +28,10 @@
         background-color: rgba(0, 0, 0, 0.5);
         padding: 10px;
         box-sizing: border-box;
-       
+        animation: rotate 1s linear forwards;
+        &:hover{
+            animation: none;
+        }
         .input-outer{
             margin: 30px auto;
         }
@@ -49,5 +56,25 @@
         color: #00c8fb;
         font-size: 14px;
         cursor: pointer;
+    }
+}
+@keyframes rotate {
+    0%{
+        transform: translate(-200px,-150px);
+    }
+    20%{
+        transform: translate(-150px,0);
+    }
+    40%{
+        transform: translate(-100px,-100px);
+    }
+    60%{
+        transform: translate(-50px,0);
+    }
+    80%{
+        transform: translate(-20px,-50px);
+    }
+    100%{
+        transform: translate(0,0);
     }
 }
