--- a/src/styles/login.less
+++ b/src/styles/login.less
@@ -1,15 +1,15 @@
 
 .login-page{
-    width: 100%;
-    // position: relative;
+    width: calc(100vw);
+    position: absolute;
+    left: 0;
     .login-bg{
         height: 100%;
-        width: 100%;
-        position: absolute;
-        top: 0;left: 0;
+        width: calc(100vw);
         background: url('http://ovhjj2x39.bkt.clouddn.com/jake-blucker-316192.jpg') center no-repeat;
         background-size: cover;
         transition: filter 1s linear;
+        position: absolute;
     }
     .blur-login{
         -webkit-filter: blur(3px); /* Chrome, Opera */
@@ -48,6 +48,14 @@
     .logout{
         position: absolute;
         right: 10px;
+        bottom: 10px;
+        color: #00c8fb;
+        font-size: 14px;
+        cursor: pointer;
+    }
+    .register{
+        position: absolute;
+        left: 10px;
         bottom: 10px;
         color: #00c8fb;
         font-size: 14px;
