--- a/src/styles/learnrecord.less
+++ b/src/styles/learnrecord.less
@@ -9,13 +9,41 @@
     .updatePart{
         padding:0 20px;
         box-sizing: border-box;
+        overflow: hidden;
     }
     .gen_area{
-        max-width: 100%;
-        min-width: 100%;
+        max-width: 98%;
+        min-width: 98%;
         min-height: 300px;
         font-family: "MicroSoft Yahei";
         font-size: 16px;
         color: #00c8fb;
     }
+    .record-list{
+        height: 500px;
+        overflow-y: scroll;
+        border: 1px solid #e5e5e5;
+        text-align: center;
+    }
+    ::-webkit-scrollbar  
+    {  
+        width: 2px;
+        height: 16px;
+        background-color: #bbb;  
+    }
+    /*定义滚动条轨道 内阴影+圆角*/
+     ::-webkit-scrollbar-track
+    {
+         -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+         border-radius: 10px;
+         background-color: #F5F5F5;
+     }
+     
+     /*定义滑块 内阴影+圆角*/
+     ::-webkit-scrollbar-thumb
+     {
+         border-radius: 10px;
+         -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+         background-color: #555;
+     }
 }
