引用文件改成https

--- a/src/styles/login.less
+++ b/src/styles/login.less
@@ -6,7 +6,7 @@
     .login-bg{
         height: 100%;
         width: calc(100vw);
-        background: url('http://ovhjj2x39.bkt.clouddn.com/jake-blucker-316192.jpg') center no-repeat;
+        background: url('https://ovhjj2x39.bkt.clouddn.com/jake-blucker-316192.jpg') center no-repeat;
         background-size: cover;
         transition: filter 1s linear;
         position: absolute;
